# Graphics-II-Course-Project

./: .gitignore  README.md
BACKUP/DEV4_Project/Builds/: ALL_BUILD.vcxproj  CMakeCache.txt  DEV4.vcxproj.filters  DrawClass.cpp  ZERO_CHECK.vcxproj  cmake_install.cmake  main.cpp  shaders.fx
DEV4_Project/Builds/: ALL_BUILD.vcxproj.filters  DEV4.vcxproj  DEV4.vcxproj.filters  DEV4_Project.sln  DrawClass.cpp  DrawClass.h  ZERO_CHECK.vcxproj.filters  defines.h  main.cpp  shaders.fx
DEV4_Project/CMakeGW/: CMakeLists.txt  main.cpp
MAIN/Build (EXE)/: .ninja_deps  .ninja_log  CMakeCache.txt  Project.ilk  README.txt  build.ninja  cmake_install.cmake  rules.ninja
MAIN/Build (EXE)/.cmake/api/v1/reply/: cache-v2-6007772009a41bb07a42.json  cmakeFiles-v1-616d56c8800261615b81.json  cmakeFiles-v1-81307065c03041bbdaeb.json  codemodel-v2-f2a9c91a36db082fe04a.json  index-2020-04-30T15-08-05-0609.json  index-2020-11-04T15-26-42-0930.json  target-Project-RelWithDebInfo-5387756e9cf578af439a.json
MAIN/Build (EXE)/Shaders/: shaders.fx
MAIN/Build (EXE)/Textures/: StoneHengeNM.dds
MAIN/Build (EXE)/WithNrmMapping/: .ninja_deps  .ninja_log  CMakeCache.txt  Project.ilk  cmake_install.cmake
MAIN/Build (EXE)/WithNrmMapping/.cmake/api/v1/reply/: cache-v2-7bac9a60e3126c96a4a7.json  (+2 more)
MAIN/Build (EXE)/WithNrmMapping/Shaders/: shaders.fx
MAIN/Build (EXE)/WithoutNrmMapping/: .ninja_deps  .ninja_log  Project.ilk
MAIN/Build (EXE)/WithoutNrmMapping/Shaders/: shaders.fx
MAIN/Project/: CMakeLists.txt  DrawClass.h  main.cpp
MAIN/Project/Shaders/: shaders.fx
(+2 files in other folders)
